# mcd

./: .gitignore  ABOUT.md  CLI_COMMANDS.md  Cargo.toml  DEPENDENCIES.md  Env_Disclaimer.md  FORMATS_COMPARISON.md  FORMAT_IMPROVEMENT_IMPLEMENTATION_PLAN.md  FOTMAT_IMPROVEMENTS_SUGGESTIONS.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  Images_Charts_Addition_Plan.md  LICENSING.md  MCD_CREATION_GUIDE.md  MCD_PYTHON_TOOL_GUIDE.md  MCD_SECURITY_GUARDRAILS.md  MCD_TECH_STACK.md  MCP_AGENT_GUIDE.md  MCP_PYTHON_QUICKSTART.md  README.md  RELEASE.md  Rendering_MCD.md  medium_file.mcd  undo-icon-in-a-frame-vector-11143567.avif
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
bindings/php/: README.md  composer.json
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/mcd/: __init__.py  __init__.pyi  mcp_server.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_api.py  test_mcp_server.py
bindings/typescript/: README.md  package-lock.json  package.json
bindings/typescript/scripts/: build-wasm.mjs
bindings/typescript/src/: index.test.ts  index.ts  wasm-bytes.ts
crates/mcd-cli/: Cargo.toml
crates/mcd-cli/src/: main.rs
crates/mcd-cli/src/commands/: add_annotation.rs  convert_pdf.rs  extract.rs  init.rs  inspect.rs  mod.rs  pack.rs  query.rs  render.rs  search.rs  tools.rs  unpack.rs  validate.rs
crates/mcd-cli/tests/: cli.rs
crates/mcd-core/: Cargo.toml
crates/mcd-core/src/: annotations.rs  assets.rs  directives.rs  document.rs  errors.rs  export.rs  images.rs  lib.rs  manifest.rs  markdown.rs  package.rs  pdf.rs  provenance.rs  schema.rs  search.rs  table_view.rs  tables.rs  validate.rs
crates/mcd-core/tests/: conformance.rs
crates/mcd-mcp/: Cargo.toml
crates/mcd-mcp/src/: lib.rs  main.rs
crates/mcd-query/: Cargo.toml
crates/mcd-query/src/: lib.rs
crates/mcd-render/: Cargo.toml
crates/mcd-render/src/: lib.rs
crates/mcd-wasm/: Cargo.toml
crates/mcd-wasm/src/: lib.rs
examples/: Hello.mcd  untitled.mcd
examples/auto-manufacturer-tech-spec/: TEXT_IMPROVEMENT.md  auto-manufacturer-tech-spec.mcd  qa_pilot_questions.jsonl  qa_pilot_questions_20.jsonl  qa_reasoning_questions_10.jsonl
examples/auto-manufacturer-tech-spec/unpacked/: manifest.json
examples/auto-manufacturer-tech-spec/unpacked/content/: Content_improvement.md  main.md
examples/auto-manufacturer-tech-spec/unpacked/provenance/: provenance.json
examples/auto-manufacturer-tech-spec/unpacked/tables/: battery_pack_module_specs.csv  battery_pack_module_specs.schema.json  battery_pack_module_specs.view.json  chassis_brake_validation_specs.csv  chassis_brake_validation_specs.schema.json  chassis_brake_validation_specs.view.json  powertrain_calibration_specs.csv  powertrain_calibration_specs.schema.json  powertrain_calibration_specs.view.json  production_quality_measurements.csv  production_quality_measurements.schema.json  production_quality_measurements.view.json  vehicle_variant_configuration_specs.csv  vehicle_variant_configuration_specs.schema.json  vehicle_variant_configuration_specs.view.json
examples/revenue-report/unpacked/tables/: revenue.schema.json
schemas/: annotation.schema.json  image.schema.json  manifest.schema.json  page-map.schema.json  provenance.schema.json  rendering.schema.json  styles.schema.json  table-view.schema.json  table.schema.json
tests/fixtures/conformance/: README.md  invalid-bad-mimetype.mcd  invalid-chart-bad-type.mcd  invalid-chart-unknown-column.mcd  invalid-csv-header-mismatch.mcd  invalid-image-missing-alt.mcd  invalid-image-only-table-strict.mcd  invalid-missing-manifest.mcd  invalid-nonnullable-empty-cell.mcd  invalid-path-traversal.mcd  invalid-svg-script.mcd  invalid-unresolved-image.mcd  invalid-unresolved-table.mcd  valid-chart.mcd  valid-image-and-chart.mcd  valid-image.mcd  valid-minimal.mcd  valid-reused-table.mcd  valid-table.mcd  valid-two-tables.mcd
various_scripts/: run_unpacked_vs_disconnected.py
web/mcd-viewer/: README.md  package-lock.json  package.json
web/mcd-viewer/src/: main.ts  styles.css
