[workspace]
members = [
    "crates/mcd-core",
    "crates/mcd-render",
    "crates/mcd-cli",
    "crates/mcd-wasm",
    "bindings/python",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mcd-format/mcd"
homepage = "https://github.com/mcd-format/mcd"
readme = "README.md"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"

[profile.release]
lto = "thin"
codegen-units = 1
