[package]
name = "mcd-python"
version = "0.1.0-alpha.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Python bindings for Markdown CSV Document packages."

[lib]
name = "_native"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
mcd-core = { path = "../../crates/mcd-core" }
mcd-query = { path = "../../crates/mcd-query" }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
serde_json = "1"

[lints]
workspace = true
