[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "mcdee"
version = "0.1.0a0"
description = "Python bindings for Markdown CSV Document packages."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "MCD contributors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/mcd-format/mcd"
Repository = "https://github.com/mcd-format/mcd"
Issues = "https://github.com/mcd-format/mcd/issues"

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
test = ["pytest>=8", "maturin>=1.7", "pandas>=1.5"]

[tool.maturin]
module-name = "mcd._native"
python-source = "."
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
