[package]
name = "mcd-cli"
version = "0.1.0-alpha.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
description = "Command line interface for Markdown CSV Document packages."

[[bin]]
name = "mcd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mcd-core = { version = "0.1.0-alpha.0", path = "../mcd-core" }
mcd-render = { version = "0.1.0-alpha.0", path = "../mcd-render" }
serde_json = "1"
zip = "*"

[lints]
workspace = true
