[package]
name = "mcd-cli"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
description = "Command line interface for Markdown CSV Document packages."

[[bin]]
name = "mcd"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
mcd-core = { version = "0.1.0-alpha.1", path = "../mcd-core" }
mcd-query = { version = "0.1.0-alpha.1", path = "../mcd-query" }
mcd-render = { version = "0.1.0-alpha.1", path = "../mcd-render" }
serde_json = "1"
zip = "8.6.0"

[lints]
workspace = true
