[package]
name = "mcd-core"
version = "0.1.0-alpha.0"
edition.workspace = true
license.workspace = true
description = "Core parser, validator, and exporter for Markdown CSV Document packages."

[dependencies]
camino = "*"
comrak = "*"
csv = "1"
indexmap = { version = "*", features = ["serde"] }
mime_guess = "*"
roxmltree = "*"
rust_decimal = { version = "*", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "*"
thiserror = "1"
time = { version = "*", features = ["serde", "parsing", "formatting", "macros"] }
zip = { version = "*", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pdf-extract = "0.10"

[dev-dependencies]
insta = "*"
jsonschema = "*"
proptest = "*"

[lints]
workspace = true
