[package]
name = "mcd-core"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
description = "Core parser, validator, and exporter for Markdown CSV Document packages."

[dependencies]
camino = "1.2.2"
comrak = "0.52.0"
csv = "1"
indexmap = { version = "2.14.0", features = ["serde"] }
mime_guess = "2.0.5"
roxmltree = "0.21.1"
rust_decimal = { version = "1.42.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
thiserror = "1"
time = { version = "0.3.47", features = ["serde", "parsing", "formatting", "macros"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pdf-extract = "0.10"

[dev-dependencies]
insta = "1.47.2"
jsonschema = "0.46.5"
proptest = "1.11.0"

[lints]
workspace = true
