[package]
name = "mcd-query"
version = "0.1.0-alpha.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
description = "Read-only SQL query engine for Markdown CSV Document package tables."

[dependencies]
anyhow = "1"
mcd-core = { version = "=0.1.0-alpha.2", path = "../mcd-core" }
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
zip = "8.6.0"

[lints]
workspace = true
