[package]
name = "mcd-render"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
description = "HTML renderer for Markdown CSV Document packages."

[dependencies]
base64 = "0.22"
indexmap = { version = "2.14.0", features = ["serde"] }
katex = { version = "0.4.6", default-features = false, features = ["duktape"] }
mcd-core = { version = "0.1.0-alpha.1", path = "../mcd-core" }
serde_json = "1"

[dev-dependencies]
insta = "1.47.2"
zip = "8.6.0"

[lints]
workspace = true
