[package]
name = "mcd-wasm"
version = "0.1.0-alpha.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords.workspace = true
description = "Raw WebAssembly bindings for Markdown CSV Document packages."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mcd-core = { version = "0.1.0-alpha.1", path = "../mcd-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
